deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 7
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: shammu101/game
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx  # This should match the labels of your Deployment
  ports:
    - protocol: TCP
      port: 80       # Port that the service will expose
      targetPort: 80 # Port on the pod that the service should forward traffic to
  type: LoadBalancer # Change to ClusterIP or NodePort based on your needs
